--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,14 +24,14 @@ experimental = ["esp-idf-svc/experimental"]
 embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]
 
 [dependencies]
+anyhow       = "=1.0.75"
 log = { version = "0.4", default-features = false }
 esp-idf-svc = { version = "0.48", default-features = false }
+toml-cfg     = "=0.1.3"
+heapless = "0.8.0"
 
-# http_client deps
-ureq = {version = "2.9.6", features = ["json"]}
-serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
-time = {version = "0.3.34", features = ["parsing"]}
 
 [build-dependencies]
 embuild = "0.31.3"
+toml-cfg = "=0.1.3"
+
