--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -3,8 +3,8 @@ target = "xtensa-esp32-espidf"
 
 [target.xtensa-esp32-espidf]
 linker = "ldproxy"
-# runner = "espflash --monitor" # Select this runner for espflash v1.x.x
-runner = "espflash flash --baud=115200 --monitor" # Select this runner for espflash v2.x.x
+# runner = "espflash flash --baud=115200 --monitor" # flash to hardware
+runner = "wokwi-server --chip esp32" # Run on Wokwi
 rustflags = [ "--cfg",  "espidf_time64"] # Extending time_t for ESP IDF 5: https://github.com/esp-rs/rust/issues/110
 
 [unstable]
@@ -14,4 +14,5 @@ build-std = ["std", "panic_abort"]
 MCU="esp32"
 # Note: this variable is not used by the pio builder (`cargo build --features pio`)
 ESP_IDF_VERSION = "v5.1.3"
-
+# Override default browser for wokwi-server
+BROWSER={value = "/Applications/Google Chrome.app/Contents/MacOS/Google Chrome", force=true}
