add fields to config

--- a/cfg_example.toml
+++ b/cfg_example.toml
@@ -1,3 +1,5 @@
 [entur]
 wifi_ssid = "Your Wifi name"
 wifi_psk = "Your Wifi password"
+from_place = "NSR:StopPlace:58381"
+to_place = "NSR:StopPlace:58366"
