write and read json

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,10 @@ log = { version = "0.4", default-features = false }
 esp-idf-svc = { version = "0.48", default-features = false }
 toml-cfg     = "=0.1.3"
 heapless = "0.8.0"
+embedded-svc = "0.27.1"
+serde_json = "1.0.114"
+serde = "1.0.197"
+time = {version = "0.3.34", features = ["parsing"]}
 
 
 [build-dependencies]
