--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -3,8 +3,8 @@ target = "xtensa-esp32-espidf"
 
 [target.xtensa-esp32-espidf]
 linker = "ldproxy"
-# runner = "espflash flash --baud=115200 --monitor" # flash to hardware
-runner = "wokwi-server --chip esp32" # Run on Wokwi
+runner = "espflash flash --baud=115200 --monitor" # flash to hardware
+# runner = "wokwi-server --chip esp32" # Run on Wokwi
 rustflags = [ "--cfg",  "espidf_time64"] # Extending time_t for ESP IDF 5: https://github.com/esp-rs/rust/issues/110
 
 [unstable]
