add fields to cfg

--- a/cfg_example.toml
+++ b/cfg_example.toml
@@ -1,5 +1,7 @@
 [entur]
 wifi_ssid = "Your Wifi name"
 wifi_psk = "Your Wifi password"
-from_place = "NSR:StopPlace:58381"
-to_place = "NSR:StopPlace:58366"
+from_place1 = "NSR:StopPlace:58381"
+to_place1 = "NSR:StopPlace:58366"
+from_place2 = "NSR:StopPlace:58381"
+to_place2 = "NSR:StopPlace:58366"
