--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -5,14 +5,17 @@ target = "xtensa-esp32-espidf"
 linker = "ldproxy"
 runner = "espflash flash --baud=115200 --monitor" # flash to hardware
 # runner = "wokwi-server --chip esp32" # Run on Wokwi
-rustflags = [ "--cfg",  "espidf_time64"] # Extending time_t for ESP IDF 5: https://github.com/esp-rs/rust/issues/110
+rustflags = [
+	"--cfg",
+	"espidf_time64",
+] # Extending time_t for ESP IDF 5: https://github.com/esp-rs/rust/issues/110
 
 [unstable]
 build-std = ["std", "panic_abort"]
 
 [env]
-MCU="esp32"
+MCU = "esp32"
 # Note: this variable is not used by the pio builder (`cargo build --features pio`)
 ESP_IDF_VERSION = "v5.1.3"
 # Override default browser for wokwi-server
-BROWSER={value = "/Applications/Google Chrome.app/Contents/MacOS/Google Chrome", force=true}
+BROWSER = { value = "/Applications/Google Chrome.app/Contents/MacOS/Google Chrome", force = true }
